Transform weather agent to inventory/delivery management agent
- Replace WeatherForecastAgent with InventoryDeliveryAgent
- Add comprehensive inventory management capabilities (check stock, low stock alerts, updates)
- Add delivery management system (tracking, ordering, recommendations, status updates)
- Create realistic sample data for 3 stores with various SKUs
- Implement adaptive card responses for delivery orders
- Update README with detailed business use case documentation
- Add inventory_plugin.py and delivery_plugin.py with full functionality
- Support natural language commands for retail operations
- Enable multi-store inventory and delivery management
- Provide rich user experience with interactive cards and action buttons

--- a/appManifest/manifest.json
+++ b/appManifest/manifest.json
@@ -45,6 +45,6 @@
     "messageTeamMembers"
   ],
   "validDomains": [
-    "2xhk9zkj-3978.inc1.devtunnels.ms"
+    "rdhx0ccq-3978.eun1.devtunnels.ms"
   ]
 }
